--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: gray;
+  background-color: rgb(255, 255, 255);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -11,4 +11,8 @@
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+}
+
+.title {
+  font-size: 38px;
 }
